# projetISI

./: CMakeLists.txt  allmeshes.jconf  iMesh.h  main.cpp  my_main_window.cpp  my_object3d.cpp  my_object3d.h  my_objects.h  my_types.h
data/: cubecorner.off  cubecorner.off~  hdodec.off~  reflex.off  reflex2.off
functionals/: func_expcos.cpp  func_expcos.h  func_parabolic.cpp  func_parabolic.h  func_sincos.cpp  func_sincos.h  functional.cpp  functional.h  functionals.h
objects/: cone.cpp  cone.h  conicmesh.cpp  conicmesh.h  cube.cpp  cube.h  cubecorner.cpp  cubecorner.h  cylinder.cpp  cylinder.h  cylindricmesh.cpp  cylindricmesh.h  disk.cpp  disk.h  diskhole.cpp  diskhole.h  func_surface.cpp  func_surface.h  funcsurface.cpp  funcsurface.h  grid.cpp  grid.h  gridcube.cpp  gridcube.h  isosphere.cpp  isosphere.h  octahedron.cpp  octahedron.h  parametricmesh.cpp  parametricmesh.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h  torus.cpp  torus.h  triMesh.cpp  triMesh.h
parametrics/: circular.cpp  circular.h  conic.cpp  conic.h  cylindric.cpp  cylindric.h  parametric.cpp  parametric.h  planar.cpp  planar.h  spheric.cpp  spheric.h  toric.cpp  toric.h
utils/: abstractpolygon.cpp  abstractpolygon.h  configurator.cpp  configurator.h  constant.cpp  constant.h  convert.cpp  convert.h  earclipping.cpp  earclipping.h  geometry.cpp  geometry.h  ipolygon.h  ipolygontriangulator.h  isicommandline.cpp  isicommandline.h  meshrefpolygon.cpp  meshrefpolygon.h  off_loader.cpp  off_loader.h  planarexpression.cpp  planarexpression.h
